--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "expo-font": "~10.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.2",
+    "expo-updates": "~0.13.4",
+    "intl": "^1.2.5",
+    "lottie-react-native": "5.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -37,7 +39,7 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^9.1.0",
     "@types/jest": "^28.1.2",
-    "@types/react": "~17.0.21",
+    "@types/react": "^18.0.25",
     "@types/react-native": "~0.67.6",
     "@types/styled-components-react-native": "^5.1.3",
     "jest-expo": "^45.0.1",
